--- a/teste.yml
+++ b/teste.yml
@@ -1,5 +1,6 @@
 ---
-- hosts: all
+- hosts: database
+    
   tasks:
     - name: 'instala pacotes'
       apt:
@@ -24,16 +25,16 @@
     # - meta: end_play
 
     - name: 'Cria o banco Mysql'
-      register: mysql_db_creation
       mysql_db:
-        name: wordpress_db2
+        name: wordpress_db
         login_user: "root"
         login_password: "_HiStOrY_V2_"
-        state: absent
-        login_host: "{{ ansible_host }}"
+        state: present
+        #login_host: "{{ ansible_host }}"
+      become: yes
 
-    - debug: 
-        msg: "{{ mysql_db_creation.changed }}"
+    #- debug: 
+        #msg: "{{ mysql_db_creation.changed }}"
 
     - name: 'cria um usuário'
       register: mysql_user_creation
@@ -45,3 +46,48 @@
       become: yes      
     - debug:
       #  msg: "{{ mysql_user_creation.changed }}"
+    - name: 'Download fucked press'
+      get_url:
+        url: https://wordpress.org/latest.tar.gz
+        dest: /tmp/latest.tar.gz
+
+    - name: 'Descompacta wordpress pro negocim la da web'
+      unarchive:
+        src: /tmp/latest.tar.gz
+        dest: /var/www/
+        remote_src: yes
+      become: yes
+    - name: 'Copia arquivos'
+      copy:
+        src: /var/www/wordpress/wp-config-sample.php
+        dest: /var/www/wordpress/wp-config.php
+        remote_src: yes
+      become: yes
+    
+    - name: 'Configura o wp-config com as entradas do banco de dados' 
+      replace:
+        path: /var/www/wordpress/wp-config.php
+        regexp: '{{ item.regex }}'
+        replace: '{{ item.value }}'
+        backup: yes
+      with_items:
+        - { regex: 'database_name_here', value: 'wordpress_db' }
+        - { regex : 'username_here', value: 'wordpress_user' }
+        - { regex : 'password_here', value: '12345' }
+      become: yes
+
+    - name: 'copia configuração de apache pro remote host'
+      copy:
+        src: /etc/ansible/000-default.conf
+        dest: /etc/apache2/sites-available/000-default.conf
+      become: yes
+
+    - name: 'reiniciando apache2 truco'
+      service:
+        name: apache2
+        state: restarted
+      become: yes
+
+    #- name: 'reiniciando apache2' 
+  #    notify:
+   #     - restart_apache
