reestruturaçao do projeto

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -494,3 +494,7 @@ deprecation_warnings = False
 
 # Set how many context lines to show in diff
 # context = 3
+[ssh_connection]
+ssh_args = -o ControlMaster=auto -o ControlPersist=3600s -o ServerAliveInterval=15
+control_path = %(directory)s/ansible-ssh-%%h-%%p-%%r
+pipelining = True
