--- a/receita.yml
+++ b/receita.yml
@@ -1,113 +1,10 @@
 ---
 - hosts: database
-    
-  tasks:
-    - name: 'instala pacotes'
-      apt:
-        name: "{{ packages }}"
-        state: latest
-      become: yes
-      vars:
-        packages: 
-          - mysql-server
-          - python-mysqldb
+  roles:
+    - mysql
 
-    - name: 'Cria o banco Mysql'
-      mysql_db:
-        name: "{{ wp_db_name }}"
-        login_user: "root"
-        login_password: "_HiStOrY_V2_"
-        state: present
-      become: yes
-
-    - name: 'cria um usuário'
-      register: mysql_user_creation
-      mysql_user:
-        name: "{{ wp_username }}"
-        password: "{{ wp_user_password }}"
-        priv: "{{ wp_db_name }}.*:ALL"
-        state: present
-        host: "{{ wp_host_ip }}"
-      become: yes
-
-    - name: 'altera arquivos mysql' 
-      replace:
-        path: /etc/mysql/mysql.conf.d/mysqld.cnf
-        regexp: '{{ item.regex }}'
-        replace: '{{ item.value }}'
-        backup: yes
-      loop:
-        - { regex: '127.0.0.1', value: '0.0.0.0' }
-      become: yes
-    - name: 'Restarting Mysql'
-      service:
-        name: mysql
-        state: restarted
-      become: yes
 - hosts: wordpress
-    
-  tasks:
-    - name: 'instala pacotes'
-      apt:
-        name: "{{ packages }}"
-        state: latest
-      become: yes
-      vars:
-        packages: 
-          - apache2
-          - mysql-server
-          - python
-          - libapache2-mod-php
-          - python-mysqldb
-          - php7.2-mysql
-          - php7.2-gd
-          - php7.2
-          - libapache2-mod-php7.2
-
-    - name: 'Download fucked press'
-      get_url:
-        url: https://wordpress.org/latest.tar.gz
-        dest: /tmp/latest.tar.gz
-
-    - name: 'Descompacta wordpress pro negocim la da web'
-      unarchive:
-        src: /tmp/latest.tar.gz
-        dest: /var/www/
-        remote_src: yes
-      become: yes
-    - name: 'Copia arquivos'
-      copy:
-        src: /var/www/wordpress/wp-config-sample.php
-        dest: /var/www/wordpress/wp-config.php
-        remote_src: yes
-      become: yes
-    
-    - name: 'Configura o wp-config com as entradas do banco de dados' 
-      replace:
-        path: /var/www/wordpress/wp-config.php
-        regexp: '{{ item.regex }}'
-        replace: '{{ item.value }}'
-        backup: yes
-      with_items:
-        - { regex: 'database_name_here', value: "{{ wp_db_name }}" }
-        - { regex : 'username_here', value: "{{ wp_username }}" }
-        - { regex : 'password_here', value: "{{ wp_user_password }}" }
-        - { regex : 'localhost', value: "{{ db_host_ip }}" }
-      become: yes
-
-    - name: 'copy apache2 default.conf to remote host'
-      template:
-        src: 'template/000-default.conf.j2'
-        dest: /etc/apache2/sites-available/000-default.conf
-      become: yes
-#    - name: 'copia configuração de apache pro remote host'
-#      copy:
-#        src: /etc/ansible/000-default.conf
-#        dest: /etc/apache2/sites-available/000-default.conf
-#      become: yes
-
-    - name: 'reiniciando apache2 truco'
-      service:
-        name: apache2
-        state: restarted
-      become: yes
+  roles:
+    - apache2
+    - site_wordpress
+  
